--- a/index.html
+++ b/index.html
@@ -1,1 +1,67 @@
-<h1>Portaria.live</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>portaria.live</title>
+
+  <link rel="stylesheet" href="https://bootswatch.com/_vendor/bootstrap/dist/css/bootstrap.min.css">  
+  <style>
+  	#app img {
+  		margin: 0 auto;
+  		text-align:center;
+  	}
+    .box {
+      border:1px solid #d2d2d2;
+      width:70px;
+      height:30px;
+      float;left;
+      text-align:center;
+    }
+    .product-info img {
+      width:50%;
+      height:auto;
+    }
+    .underline {
+      text-decoration:line-through;
+    }
+  </style>
+
+<div class="jumbotron">
+  <h1 class="display-3">portaria.live </h1>
+  <p class="lead"><b>Portaria.live</b> é um software livre para controle de condomínios.</p>
+  <hr class="my-4">
+  <p>Funcionalidades:</p>
+  <ul>
+  	<li>Controle de Blocos/Quadras</li>
+  	<li>Controle de Unidades</li>
+  	<li>Controle de Moradores</li>
+  	<li>Controle de Veículos</li>
+  	<li>Controle de Visitantes</li>
+  	<li>Registro de Visitante</li>
+  </ul>
+
+  <p class="lead">
+    <a class="btn btn-primary btn-lg" href="https://github.com/rafaelbozzetti/portaria.live" target="_blank" role="button">Baixe Agora</a>
+  </p>
+</div>
+
+
+  <div id="app">
+  	<img src="https://github.com/rafaelbozzetti/portaria.live/blob/master/site/portaria.live/Login.png?raw=true" />
+	<img src="https://github.com/rafaelbozzetti/portaria.live/blob/master/site/portaria.live/Cadastro_Morador.png?raw=true" />
+	<img src="https://github.com/rafaelbozzetti/portaria.live/blob/master/site/portaria.live/Dashboard.png?raw=true" />
+	<img src="https://github.com/rafaelbozzetti/portaria.live/blob/master/site/portaria.live/Moradores.png?raw=true" />
+	<img src="https://github.com/rafaelbozzetti/portaria.live/blob/master/site/portaria.live/Registro_Visita.png?raw=true" />
+	<img src="https://github.com/rafaelbozzetti/portaria.live/blob/master/site/portaria.live/Registro_Visitante.png?raw=true" />
+	<img src="https://github.com/rafaelbozzetti/portaria.live/blob/master/site/portaria.live/Relatorio.png?raw=true" />
+  </div>
+</head>
+
+<script src="https://cdn.jsdelivr.net/npm/vue"></script>
+<script src="main.js"></script>
+<body>
+  
+</body>
+</html>
