--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </style>
 
 <div class="jumbotron">
-  <h1 class="display-3">portaria.live </h1>
+  <h1 class="display-3"><img src="https://github.com/rafaelbozzetti/portaria.live/blob/master/public/assets/images/asgard.png?raw=true" /> </h1>
   <p class="lead"><b>Portaria.live</b> é um software livre para controle de condomínios.</p>
   <hr class="my-4">
   <p>Funcionalidades:</p>
