--- a/index.html
+++ b/index.html
@@ -11,25 +11,13 @@
   	#app img {
   		margin: 0 auto;
   		text-align:center;
+		max-width: 100%;
+		height: auto;  		
   	}
-    .box {
-      border:1px solid #d2d2d2;
-      width:70px;
-      height:30px;
-      float;left;
-      text-align:center;
-    }
-    .product-info img {
-      width:50%;
-      height:auto;
-    }
-    .underline {
-      text-decoration:line-through;
-    }
   </style>
 
 <div class="jumbotron">
-  <h1 class="display-3"><img src="https://github.com/rafaelbozzetti/portaria.live/blob/master/public/assets/images/asgard.png?raw=true" /> </h1>
+  <h1 class="display-3"> <img src="https://github.com/rafaelbozzetti/portaria.live/blob/master/public/assets/images/asgard.png?raw=true" /> </h1>
   <p class="lead"><b>Portaria.live</b> é um software livre para controle de condomínios.</p>
   <hr class="my-4">
   <p>Funcionalidades:</p>
