Ajuste das metatags

--- a/index.html
+++ b/index.html
@@ -4,8 +4,26 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>portaria.live</title>
 
+  <title>Portaria.live</title>
+  <meta name="title" content="Portaria.live">
+  <meta name="description" content="Software Livre para gestão de condomínios. ">
+  <meta name="Keywords" content="portaria, condominio, gestão, porteiro, prédio, condomino, sindico, grátis, opensource, free">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://portaria.live/">
+  <meta property="og:title" content="Portaria.live">
+  <meta property="og:description" content="Software Livre para gestão de condomínios. ">
+  <meta property="og:image" content="https://github.com/rafaelbozzetti/portaria.live/blob/master/site/portaria.live/Login.png?raw=true">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://portaria.live/">
+  <meta property="twitter:title" content="Portaria.live">
+  <meta property="twitter:description" content="Software Livre para gestão de condomínios. ">
+  <meta property="twitter:image" content="https://github.com/rafaelbozzetti/portaria.live/blob/master/site/portaria.live/Login.png?raw=true">
+  
   <link rel="stylesheet" href="https://bootswatch.com/_vendor/bootstrap/dist/css/bootstrap.min.css">  
   <style>
   	#app img {
